Notebook Update from Gitlab - 574398bf

--- a/EDA Mosaics - Rio Grande do Sul Flood Extent/EDA Mosaics - Rio Grande do Sul Flood Extent.ipynb
+++ b/EDA Mosaics - Rio Grande do Sul Flood Extent/EDA Mosaics - Rio Grande do Sul Flood Extent.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "source": [
     "**References:**\n",
-    "- [Earthdaily package](https://github.com/earthdaily/earthdaily-python-client)\n",
-    "- [Earthdata Store documentation](https://earthdaily.github.io/EDA-Documentation/)\n",
+    "- [EarthDaily package](https://github.com/earthdaily/earthdaily-python-client)\n",
+    "- [Earth Data Store documentation](https://earthdaily.github.io/EDA-Documentation/)\n",
     "- [Xarray as multi-dimensional object](https://docs.xarray.dev/en/stable/)\n",
     "- [Spyndex spectral indices library](https://github.com/awesome-spectral-indices/spyndex)"
    ]
@@ -129,7 +129,7 @@
    "id": "f159c8da-763f-4c93-b80d-4533343a8d64",
    "metadata": {},
    "source": [
-    "## 1️⃣ Environment Setup\n",
+    "## Environment Setup\n",
     "\n",
     "We start by setting up the environment and loading the necessary libraries, including [Dask](https://www.dask.org/) for parallel computing and geospatial libraries like [GeoPandas](https://geopandas.org/en/stable/docs/reference.html) and [Rasterio](https://rasterio.readthedocs.io/en/stable/).\n",
     "\n",
@@ -226,10 +226,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "322624a8-583a-44af-b945-17018897661a",
+   "metadata": {},
+   "source": [
+    "> _**Note:**_ To gain access to the Earth Data Store data used in this example, please [create an EarthDaily account](https://console.earthdaily.com/mosaics/signup)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3608446a-0194-44c5-86d8-53b1614dd28b",
    "metadata": {},
    "source": [
-    "Establishing a connection to the EarthDataStore:"
+    "Establishing a connection to the Earth Data Store:"
    ]
   },
   {
@@ -664,7 +672,7 @@
    "id": "80e47780-8864-4880-9c50-b15388d2b1c8",
    "metadata": {},
    "source": [
-    "## 2️⃣ Loading Satellite Data and Calculating Flooded Areas\n",
+    "## Loading Satellite Data and Calculating Flooded Areas\n",
     "Below we will iterate over each Item ID corresponding to a **PRE** and **POST** flood Mosaic. For each item we:\n",
     "\n",
     "* Retrieve the corresponding EarthMosaic items, by passing a Collection and Item ID to an EarthDataStore search\n",
@@ -832,7 +840,7 @@
    "id": "b6675a04-46ec-466e-b951-c57c05b2cb91",
    "metadata": {},
    "source": [
-    "## 3️⃣ Calculate the Flooded Area\n",
+    "## Calculate the Flooded Area\n",
     "\n",
     "Analyzing the difference in NDVI-MNDWI values enables:\n",
     "\n",
@@ -2023,9 +2031,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "temp-test",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "temp-test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2037,7 +2045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
