Notebook Update from Gitlab - dff7ab28

--- a/EDA Mosaics - EarthMosaics vs Sentinel-2 NDVI/EDA Mosaics - EarthMosaics vs Sentinel-2 NDVI.ipynb
+++ b/EDA Mosaics - EarthMosaics vs Sentinel-2 NDVI/EDA Mosaics - EarthMosaics vs Sentinel-2 NDVI.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "source": [
     "**References:**\n",
-    "- [Earthdaily package](https://github.com/earthdaily/earthdaily-python-client)\n",
-    "- [Earthdata Store documentation](https://earthdaily.github.io/EDA-Documentation/)\n",
+    "- [EarthDaily package](https://github.com/earthdaily/earthdaily-python-client)\n",
+    "- [Earth Data Store documentation](https://earthdaily.github.io/EDA-Documentation/)\n",
     "- [Xarray as multi-dimensional object](https://docs.xarray.dev/en/stable/)"
    ]
   },
@@ -120,7 +120,7 @@
    "id": "5fc53f95-e239-43ae-8b06-4d5b4274ba1c",
    "metadata": {},
    "source": [
-    "## 1️⃣ Environment Setup\n",
+    "## Environment Setup\n",
     "\n",
     "We start by setting up the environment and loading the necessary libraries, including geospatial libraries like [GeoPandas](https://geopandas.org/en/stable/docs/reference.html) and [Rasterio](https://rasterio.readthedocs.io/en/stable/).\n",
     "\n",
@@ -201,7 +201,7 @@
    "id": "54d53c1c-0540-4f46-8334-dd386cab2c07",
    "metadata": {},
    "source": [
-    "Next we load in environment variables, please update the associated [`template.env`](template.env) with credentials gathered from the [EarthDaily Account Management page](https://console.earthdaily.com/account)."
+    "Loading in environment variables, please update the associated [`EDS.env`](EDS.env), which can be downloaded from the [EarthDaily Account Management page](https://console.earthdaily.com/account)."
    ]
   },
   {
@@ -222,7 +222,23 @@
     }
    ],
    "source": [
-    "load_dotenv(\"template.env\")  # take environment variables from .env."
+    "load_dotenv(\"EDS.env\")  # take environment variables from .env."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f2d4a37-e91a-46e2-b4fa-4b49e64c6326",
+   "metadata": {},
+   "source": [
+    "> _**Note:**_ To gain access to the Earth Data Store data used in this example, please [create an EarthDaily account](https://console.earthdaily.com/mosaics/signup)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f2d4a37-e91a-46e2-b4fa-4b49e64c6326",
+   "metadata": {},
+   "source": [
+    "> _**Note:**_ To gain access to the Earth Data Store data used in this example, please [create an EarthDaily account](https://console.earthdaily.com/mosaics/signup)"
    ]
   },
   {
@@ -8901,7 +8917,7 @@
    "id": "8529d9e7-bb49-4a43-8891-1fe3953838ab",
    "metadata": {},
    "source": [
-    "## 2️⃣ Loading Satellite Data\n",
+    "## Loading Satellite Data\n",
     "Below we will:\n",
     "* [Search Sentinel-2 Collection](https://pystac-client.readthedocs.io/en/stable/api.html#pystac_client.Client.search) for imagery over our AOI and TOI, including a max_cloud percentage\n",
     "* Use [`stac_load`](https://odc-stac.readthedocs.io/en/latest/_api/odc.stac.load.html) to retrieve an [`xarray Dataset`](https://docs.xarray.dev/en/stable/), which includes: \n",
@@ -11660,7 +11676,7 @@
    "id": "d9f50284-d763-489c-aff3-de1725140b4e",
    "metadata": {},
    "source": [
-    "## 3️⃣ Calculate NDVI"
+    "## Calculate NDVI"
    ]
   },
   {
